--- a/src/styles/front-page.css
+++ b/src/styles/front-page.css
@@ -14,31 +14,55 @@
   margin: 0 auto 0 0;
 }
 
+.content__featured-image {
+  width: 100%;
+  max-width: 650px;
+  height: auto;
+  img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+}
+
+.work__title {
+  font-size: 3rem;
+}
+
 .loop {
   display: block;
+  margin-bottom: 2rem;
 }
 
 .post {
   width: 100%;
-  /* max-width: 300px; */
+  display: block;
+  box-sizing: border-box;
   height: auto;
+  padding: 8px;
   margin-bottom: 1rem;
-}
-
-.post__link {
-  width: 100%;
-  height: 100%;
+  background-color: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  transition: all 0.3s ease-in-out;
+  &:hover {
+    box-shadow: 3px 3px 7px 1px rgba(0, 0, 0, 0.5);
+  }
 }
 
 .post__image {
   width: 100%;
-  /* max-width: 300px; */
   height: auto;
   aspect-ratio: 1/1;
+  margin-bottom: 1rem;
+  overflow: hidden;
   img {
     object-fit: cover;
     width: 100%;
     height: 100%;
+    transition: all 0.3s ease-in-out;
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
 
@@ -47,11 +71,30 @@
   padding: 0;
   font-weight: 600;
   font-size: 1rem;
+  text-decoration: none;
 }
 
-/* @media screen and (max-width: 480px) {
+@media screen and (min-width: 480px) {
   .loop {
     display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+  }
+
+  .post {
+    margin-bottom: 0;
+    width: auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .loop {
     grid-template-columns: 1fr 1fr 1fr;
   }
-} */
+}
+
+@media screen and (min-width: 1024px) {
+  .loop {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
