--- a/src/styles/front-page.css
+++ b/src/styles/front-page.css
@@ -1,22 +1,25 @@
 #page {
-  hr:first-of-type {
-    /* display: none; */
+  hr {
+    display: none;
   }
 }
 
 .container {
   padding: 0 1rem;
+  max-width: 645px;
+  margin: auto;
+  margin-bottom: 4rem;
 }
 
 .content {
   width: 100%;
-  max-width: 700px;
-  margin: 0 auto 0 0;
+  /* max-width: 645px;
+  margin: auto; */
 }
 
 .content__featured-image {
   width: 100%;
-  max-width: 650px;
+  /* max-width: 645px; */
   height: auto;
   img {
     width: 100%;
@@ -74,17 +77,20 @@
   text-decoration: none;
 }
 
-@media screen and (min-width: 480px) {
-  .loop {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1rem;
-  }
+.loop {
+  max-width: 645px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+}
 
-  .post {
-    margin-bottom: 0;
-    width: auto;
-  }
+.post {
+  margin-bottom: 0;
+  width: auto;
+}
+
+@media screen and (min-width: 480px) {
 }
 
 @media screen and (min-width: 768px) {
@@ -93,8 +99,8 @@
   }
 }
 
-@media screen and (min-width: 1024px) {
+/* @media screen and (min-width: 1024px) {
   .loop {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
-}
+} */
